<resources>
    <string name="app_name">Quản lý thu chi cá nhân</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="LoaiThanhToan">Loại thanh toán</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >3 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Chi</string>
    <string name="tab_text_2">Thu</string>
    <string name="tab_text_3">Thống kê</string>
    <string name="tab_text_4">Cài Đặt</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="FirstName">Họ</string>
    <string name="Password">Mật khẩu</string>
    <string name="CategoryThu">Danh mục thu</string>
    <string name="Save">lưu</string>
    <string name="LastName">Tên</string>
    <string name="MoneyPerDay">Số tiền thông báo khi sài quá trong 1 ngày</string>
    <string name="EditInformation">Chỉnh sửa thông tin</string>
    <string name="NewThu">Thu nhập mới</string>
    <string name="Login">Đăng nhập</string>
    <string name="CreateAccount">Tạo tài khoản</string>
    <string name="title_activity_action_them_thu">ActionThemThu</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_them_thu">ThemThuActivity</string>
    <string name="title_activity_chi_tiet_thong_ke">ChiTietThongKe</string>

    <string-array name="thoigian_thong_ke">
        <item>Ngày</item>
        <item>Tháng</item>
        <item>Năm</item>
    </string-array>
    <string-array name="loai_thong_ke">
        <item>Thu</item>
        <item>Chi</item>
    </string-array>
    <string-array name="loai_chi">
        <item>Ăn sáng</item>
        <item>Ăn trưa</item>
        <item>Ăn tối</item>
        <item>Thức ăn</item>
        <item>Ăn vặt</item>
        <item>Xăng</item>
        <item>Chi tiêu cá nhân</item>
    </string-array>
    <string-array name="thang">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
<!--    <string-array name="nam">
    <item>Năm 2018</item>
    <item>Năm 2019</item>
    <item>Năm 2020</item>
    <item>Năm 2021</item>
    </string-array>-->
    <string-array name="nam">
        <item>2021</item>
        <item>2020</item>
        <item>2019</item>
        <item>2018</item>
        <item>2017</item>
    </string-array>
    <string-array name="loai_thu">
        <item>Tiền lương</item>
        <item>Thu nhập thêm</item>
        <item>Khác</item>
    </string-array>
    <string name="title_activity_them_chi">ThemChiActivity</string>
</resources>