<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".ThemChiActivity"
    tools:deviceIds="wear">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/inner_frame_layout_padding"
      >

        <DatePicker
            android:id="@+id/ChonNgay_ThemChi"
            android:layout_width="match_parent"
            android:layout_height="115dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="66dp"
            android:layout_marginEnd="24dp"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            android:fontFamily="sans-serif-medium"
            android:gravity="center">


        </DatePicker>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="46dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:hint="@string/prompt_email"
            android:text="Chi tiêu mới"
            android:textColor="#fa5246"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/LoaiThanhToanThemChi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="196dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/LoaiThanhToan"
            android:inputType="text"

            android:selectAllOnFocus="true"
            android:textColorLink="#fa5246" />

        <EditText
            android:id="@+id/CategoryChi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="256dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/CategoryThu"
            android:inputType="text"
            android:selectAllOnFocus="true"
            android:textColorLink="#fa5246" />
        <EditText
            android:id="@+id/SoTienChi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="316dp"
            android:layout_marginEnd="24dp"
            android:hint="Số tiền"
            android:inputType="number"
            android:drawableEnd="@drawable/ic_money"
            android:selectAllOnFocus="true" />

        <EditText
            android:layout_width="match_parent"
            android:id="@+id/GhichuThemChi"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="376dp"
            android:layout_marginEnd="24dp"
            android:headerBackground="#fa5246"
            android:hint="Ghi chú"
            android:inputType="number"
            />

        <Button
            android:id="@+id/SaveChi"
            android:layout_width="138dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#fa5246"
            android:drawableStart="@drawable/ic_save"
            android:outlineSpotShadowColor="#FFFFFF"
            android:text="@string/Save"
            android:textSize="20sp" />

    </FrameLayout>
</androidx.wear.widget.BoxInsetLayout>