<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Components.CaiDat">

    <Button
        android:id="@+id/saveSetting"
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif-medium"
        android:backgroundTint="#fa5246"
        android:drawableStart="@drawable/ic_save"
        android:text="@string/Save"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:hint="@string/prompt_email"
        android:text="@string/EditInformation"
        android:textColor="#fa5246"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/EmailSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="72dp"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:textColorLink="#fa5246"
        android:importantForAutofill="no"
        android:enabled="false"/>

    <Button
        android:id="@+id/EmailEditSetting"
        android:backgroundTint="#FFFFFF"
        android:layout_width="46dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:layout_marginRight="24dp"
        android:layout_gravity="right"
        android:drawableStart="@drawable/ic_baseline_edit_24"/>

    <com.google.android.material.textfield.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="72dp"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/passwordSetting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

<!--    <EditText
        android:id="@+id/passwordSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="156dp"
        android:layout_marginEnd="72dp"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textColorLink="#fa5246"
        app:passwordToggleEnabled="true"
        app:passwordToggleDrawable="@drawable/ic_baseline_remove_red_eye_24"
        android:enabled="false"/>-->


    <Button
        android:id="@+id/PasswordEditSetting"
        android:layout_width="46dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="156dp"
        android:layout_marginRight="24dp"
        android:backgroundTint="#FFFFFF"
        android:drawableStart="@drawable/ic_baseline_edit_24" />

    <EditText
        android:id="@+id/FullNameSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="216dp"
        android:layout_marginEnd="72dp"
        android:hint="Họ và tên"
        android:inputType="text"
        android:selectAllOnFocus="true"
        android:enabled="false"/>

    <Button
        android:id="@+id/FullNameEditSetting"
        android:backgroundTint="#FFFFFF"
        android:layout_width="46dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="216dp"
        android:layout_marginRight="24dp"
        android:drawableStart="@drawable/ic_baseline_edit_24"
        android:layout_gravity="right"/>
    <EditText
        android:id="@+id/MoneySetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="276dp"
        android:layout_marginEnd="72dp"
        android:drawableEnd="@drawable/ic_money"
        android:headerBackground="#fa5246"
        android:hint="@string/MoneyPerDay"
        android:inputType="number"
        android:enabled="false"/>

    <Button
        android:id="@+id/MoneyEditSetting"
        android:backgroundTint="#FFFFFF"
        android:layout_width="46dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="276dp"
        android:layout_marginRight="24dp"
        android:drawableStart="@drawable/ic_baseline_edit_24"
        android:layout_gravity="right"/>

    <Button
        android:id="@+id/LogOutSetting"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="bottom|right"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#FFFFFF"
        android:drawableStart="@drawable/ic_baseline_exit_to_app_24"
        tools:ignore="RtlHardcoded" />

    <ProgressBar
        android:id="@+id/ProgressSetting"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_gravity="center|center_vertical"
        app:layout_constraintVertical_bias="0.638" />

</FrameLayout>